bk_ida/sjengida/g2/check_piece_square
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/check_piece_square/src/utils.c:1243:29: error: use of undeclared identifier 'stream'
p_markers = ( const char *)&stream._markers; 
                            ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/check_piece_square/src/utils.c:1256:29: error: use of undeclared identifier 'stream'
p_markers = ( const char *)&stream._lock; 
                            ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/check_piece_square/src/utils.c:1261:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/check_piece_square/src/utils.c:1272:10: error: use of undeclared identifier 'stream'
printf( &stream._unused2[12], ( unsigned int)i); 
         ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/check_piece_square/src/utils.c:1283:29: error: use of undeclared identifier 'stream'
p_markers = ( const char *)&stream.__pad4; 
                            ^
5 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/check_piece_square/src/obj/utils.o] Error 1
